Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130620

Drag: shows warning about sourceSize when using with grabToImage()

XMLWordPrintable

    • All
    • 314bdefec (dev), 65a11862e (6.8), 57cc313cd (dev)

      Using the example code in https://doc.qt.io/qt-6/qml-qtquick-drag.html#imageSource-attached-prop leads to this warning:

       Warning: Ignoring sourceSize request for image url that came from grabToImage. Use the targetSize parameter of the grabToImage() function instead. 

      Most likely related to https://doc.qt.io/qt-6/qml-qtquick-drag.html#imageSourceSize-attached-prop

        1. Main.qml
          2 kB
          renaud.guezennec
        For Gerrit Dashboard: QTBUG-130620
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            stefanbauer Stefan Bauer
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes