Avoid warning in QQuickPixmap::load: avoid having imageSourceSize 0 x 0

An invalid QSize (AKA a default-constructed QSize) is -1 x -1.
That's what QQuickPixmap::load() expects in requestSize whenever the
image comes from an itemgrabber:// URL (since
d0649a1b457f321cfafee1aaf443543fd11a7112). But when a DnD image is
supplied by calling grabToImage(), the result is 0 x 0 until loading
is done. We have to avoid passing that on to QQuickPixmap::load().

Amends 0290e0fd5285cd48809ade02ce2e67a423ba3152

Fixes: QTBUG-130620
Pick-to: 6.8
Change-Id: I9b8ea6eb7973b3f5ee6358d09810cb8f84559306
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>